[package]
name = "solana-bls-keypair"
description = "Solana BLS keypair"
documentation = "https://docs.rs/solana-bls-keypair"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
blst = { workspace = true }
blstrs = { workspace = true }
ff = { workspace = true }
group = { workspace = true }
rand = { workspace = true }
solana-signature = { workspace = true, optional = true }
solana-signer = { workspace = true, optional = true }
subtle = { workspace = true, optional = true }
thiserror = { workspace = true }

[dev-dependencies]
solana-keypair = { workspace = true }

[features]
solana-signer-derive = ["dep:solana-signer", "dep:solana-signer", "dep:subtle"]

[lib]
crate-type = ["cdylib"]

[lints]
workspace = true
