[package]
name = "solana-build-alpenglow-vote"
description = "Build alpenglow-vote"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[build-dependencies]
build-print = "0.1.1"
glob = "0.3.2"
serde = { workspace = true }
toml = { workspace = true }

[lib]
crate-type = ["lib"]
name = "build_alpenglow_vote"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[lints]
workspace = true
