[package]
name = "solana-build-alpenglow-vote"
description = "Build alpenglow-vote"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[lib]
crate-type = ["lib"]
name = "build_alpenglow_vote"

[build-dependencies]
build-print = "0.1.1"
glob = "0.3.2"
serde = { workspace = true }
toml = { workspace = true }

[lints]
workspace = true
