[package]
name = "solana-log-utils"
description = "Solana Logging Utilitites"
documentation = "https://docs.rs/solana-log-utils"
publish = false
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
clap = { workspace = true }
libc = { workspace = true }
log = { workspace = true }
signal-hook = { workspace = true }
solana-logger = { workspace = true }

[lib]
crate-type = ["lib"]
name = "solana_log_utils"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
