[package]
name = "solana-votor-messages"
description = "Blockchain, Rebuilt for Scale"
documentation = "https://docs.rs/solana-votor-messages"
readme = "../README.md"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[features]
frozen-abi = ["dep:solana-frozen-abi", "dep:solana-frozen-abi-macro"]

[dependencies]
bitvec = { workspace = true }
bytemuck = { workspace = true }
num_enum = { workspace = true }
serde = { workspace = true }
solana-account = { workspace = true }
solana-bls-signatures = { workspace = true, features = [
    "bytemuck", "solana-signer-derive",
] }
solana-clock = { workspace = true }
solana-frozen-abi = { workspace = true, optional = true, features = [
    "frozen-abi",
] }
solana-frozen-abi-macro = { workspace = true, optional = true, features = [
    "frozen-abi",
] }
solana-hash = { workspace = true }
solana-logger = { workspace = true }
solana-program = { workspace = true }
solana-vote-interface = { workspace = true }
spl-pod = { workspace = true }

[lints]
workspace = true
