[package]
name = "mcp-reconstruction"
version.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
agave-transaction-view = { workspace = true }
solana-core = { workspace = true }
solana-fee-structure = { workspace = true }
solana-runtime = { workspace = true }
solana-runtime-transaction = { workspace = true }
solana-svm-transaction = { workspace = true }
solana-transaction = { workspace = true }

[lints]
workspace = true
