[package]
name = "mcp-stage"
version = "0.2.0"
edition = "2021"

[dependencies]
bincode = { workspace = true }
crossbeam-channel = "0.5"
mcp-wire = { path = "../mcp-wire" }
mcp-types = { path = "../mcp-types" }
mcp-crypto-vc = { path = "../mcp-crypto-vc" }
mcp-blockstore = { path = "../mcp-blockstore" }
mcp-reconstructor = { path = "../mcp-reconstructor" }
